# fastder

./: CMakeLists.txt  small2826.bedGraph  small2926.bedGraph
.github/workflows/: ci.yml
conda/recipe/: build.sh  meta.yaml
simulated_data/SimulatedDataMLS/: ASim1!MyStudy001!hg38!local.all.bw  internal.junctions.MyStudy001.ALL.ID  internal.junctions.MyStudy001.ALL.MM  internal.junctions.MyStudy001.ALL.RR  recount3_BigWig_list_BRAIN_URLs.csv  splicing_variants.gtf
